# SoftAi_Model

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  ai_image_generator.spec  build.bat  build.sh  compatible_requirements.txt  docker-entrypoint.sh  main.py  requirements.txt
.github/workflows/: test.yml
src/: .pipeline_img_to_img.png.un~  .pipeline_inpainting.py.un~  CMakeLists.txt  __init__.py  generate_arbitr.py  generate_cake.py  generate_cat.py  generate_dog.py  pipeline_inpainting.py  pipeline_txt_to_img.py  requirements.txt
templates/: index.html
tests/: test_pipeline_img_to_img.py  test_pipeline_inpainting.py  test_pipeline_txt_to_img.py
